[package]
name = "vayu"
version = "0.1.11"
edition = "2021"
authors = ["Raghav Tirumale raghav.tirumale@gmail.com"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MythicalCow/vayu"
repository = "https://github.com/MythicalCow/vayu"
keywords = ["cli"]
categories = ["command-line-utilities"]
description = "a minimimalist CLI task-management tool that includes task scheduling, event planning, daily agenda, and pomodoro timer."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.27.0"
event_parser = "0.1.1"
icalendar = "0.16.0"
indicatif = "0.17.7"
date_time_parser = "0.1.0"
rand = "0.8.5"
ratatui = "0.25.0"
scraper = "0.19.0"
reqwest = { version = "0.12.1", features = ["blocking"] }
ort = "2.0.0-rc.1"
ndarray = "0.15"
tokenizers = { version = ">=0.13.4", default-features = false, features = [ "onig" ] }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
llm = "0.1.1"


