[package]
name = "vayu"
version = "0.2.4"
edition = "2021"
authors = ["Raghav Tirumale raghav.tirumale@gmail.com"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MythicalCow/vayu"
repository = "https://github.com/MythicalCow/vayu"
keywords = ["cli"]
categories = ["command-line-utilities"]
description = "a minimalist CLI task-management tool that includes task scheduling, pomodoro, news fetching, and an LLM interface"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"]}
tokio-stream = { version = "0.1.15"}
ollama-rs = { version = "0.1.9", features = ["stream", "chat-history"] }
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.27.0"
event_parser = "0.1.1"
icalendar = "0.16.0"
indicatif = "0.17.7"
date_time_parser = "0.1.0"
rand = "0.8.5"
ratatui = "0.25.0"
scraper = "0.19.0"
reqwest = { version = "0.12.1", features = ["blocking"] }






